# CmakeStudyNew

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  conanfile.py
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  CodeCoverage.cmake  Lto.cmake  Sanitizers.cmake  Warnings.cmake
configured/: CMakeLists.txt  projectVersion.hpp.in
docs/html/: dir_000002_000000.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.map  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.md5  dir_21d92741086fd64864491587ea936dd4.html  dir_21d92741086fd64864491587ea936dd4_dep.map  dir_21d92741086fd64864491587ea936dd4_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  include_2_c_make_lists_8txt.html  include_2my__lib_2_c_make_lists_8txt.html  index.html  my__lib_8cpp.html  my__lib_8cpp__incl.map  my__lib_8cpp__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.map  my__lib_8h__dep__incl.md5  my__lib_8h_source.html  src_2_c_make_lists_8txt.html  src_2my__lib_2_c_make_lists_8txt.html
docs/html/search/: all_0.js  functions_0.js  functions_1.js  searchdata.js
include/: CMakeLists.txt
include/my_lib/: CMakeLists.txt  my_lib.h
src/my_lib/: CMakeLists.txt  my_lib.cpp
tests/: CMakeLists.txt  main.cpp
